2011-07-28  Alp Aker  <alp.tekin.aker@gmail.com>

	* nsfns.m (x_set_foreground_color): Set f->foreground_pixel when
	setting frame foreground color (Bug#9175).
	(x_set_background_color): Likewise.

2011-07-28  Alp Aker  <alp.tekin.aker@gmail.com>

	Implement strike-through and overline on NextStep (Bug#8863).

	* nsfont.m (nsfont_open): Use underline position provided by font,
	instead of hard-coded value of 2.
	(nsfont_draw): Call ns_draw_text_decoration instead.

	* nsterm.h: Add declaration for ns_draw_text_decoration.

	* nsterm.m (ns_draw_text_decoration): New function for drawing
	underline, overline, and strike-through.
	(ns_dumpglyphs_image, ns_dumpglyphs_stretch): Add call to
	ns_draw_text_decoration.  Change treatment of cursor drawing to
	accomodate underlining, etc.

2011-07-28  Eli Zaretskii  <eliz@gnu.org>

	* buffer.c (init_buffer_once): Set bidi-display-reordering to t by
	default.

2011-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	* alloc.c (memory_full) [!SYNC_INPUT]: Fix signal-related race.
	Without this fix, if a signal arrives just after memory fills up,
	'malloc' might be invoked reentrantly.

	* image.c (x_check_image_size) [!HAVE_X_WINDOWS]: Return 1.
	In other words, assume that every image size is allowed, on non-X
	hosts.  This assumption is probably wrong, but it lets Emacs compile.

2011-07-28  Andreas Schwab  <schwab@linux-m68k.org>

	* regex.c (re_iswctype): Convert return values to boolean.

2011-07-28  Eli Zaretskii  <eliz@fencepost.gnu.org>

	* xdisp.c (compute_display_string_pos): Don't use cached display
	string position if the buffer had its restriction changed.
	(Bug#9184)

2011-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	* callproc.c (Fcall_process): Use 'volatile' to avoid vfork clobbering.

2011-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	Integer signedness and overflow and related fixes.  (Bug#9079)

	* bidi.c: Integer size and overflow fixes.
	(bidi_cache_size, bidi_cache_idx, bidi_cache_last_idx)